--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,19 @@
         android:theme="@style/Theme.Sudoku"
         tools:targetApi="31">
         <activity
-            android:name=".activities.HomeActivity"
+            android:name=".activities.HistoryActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.StatisticsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.PlayGuideActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activities.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +33,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".activities.GameCompleteActivity"
             android:exported="false" />
