--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sudoku"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.StrategyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.StrategiesActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.HistoryActivity"
             android:exported="true" />
