--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,16 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.EventActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.AwardsActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.StrategyActivity"
             android:exported="false" />
         <activity
             android:name=".activities.StrategiesActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".activities.HistoryActivity"
             android:exported="true" />
